syntax = "proto3";

package ecommerce.adminorder.v1;

option go_package = "backend/api/admin/order/v1;adminorderv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

import "backend/api/cart/v1/cart.proto";
import "backend/api/order/v1/order.proto";
import "backend/api/user/v1/user.proto";

service AdminOrder {
  // 查询全部订单列表
  rpc GetAllOrders(GetAllOrdersReq) returns (AdminOrderReply) {
    option (google.api.http) = {
      get: "/v1/admin/orders"
    };
  }

}

// 查询订单列表请求的消息结构
message GetAllOrdersReq {
  uint32 page = 1; // 分页参数：当前页码，默认值为 0
  uint32 page_size = 2; // 分页参数：每页大小，默认值为 20，最大值为 100
}

message OrderItem {
  int64 sub_order_id = 1; // 子订单 ID
  cart.v1.CartItem item = 2; // 购物车中的商品项
  double cost = 3; // 商品单价
  string email = 4; // 用户邮箱
  string user_id = 5 [
    (validate.rules).string.len = 32, // 验证用户 ID 的长度为 32
    (validate.rules).string.uuid = true // 验证用户 ID 为 UUID 格式
  ];
  user.v1.ConsumerAddress address = 6; // 用户地址信息
  string currency = 7 [(validate.rules).string.len = 3]; // 货币代码（如 USD、CNY），长度固定为 3
  order.v1.PaymentStatus payment_status = 8; // 支付状态
  order.v1.ShippingStatus shipping_status = 9; // 货运状态,冗余, 减少查询
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11; // 订单创建时间
}
message AdminOrderInterface {
  repeated OrderItem items = 1; // 订单项列表
  int64 order_id = 2; // 订单 ID
  google.protobuf.Timestamp created_at = 3;
}
message AdminOrderReply {
  repeated AdminOrderInterface orders = 1; // 订单列表
}
